--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@next/font": "^13.4.7",
     "@portabletext/react": "3.0.4",
     "@sanity/client": "6.4.6",
@@ -34,7 +35,7 @@
     "eslint": "^8.47.0",
     "eslint-config-next": "13.4.13",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.28",
     "prettier": "^3.0.1",
     "prettier-plugin-packagejson": "^2.4.5",
     "prettier-plugin-tailwindcss": "^0.5.2",
